# OasisPlatform

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .travis.yml  .trivyignore  .trivyignore.yaml  2.1.1_docker-compose.yml  CHANGELOG.rst  CLAUDE.md  Dockerfile.api_runner  Dockerfile.api_server  Dockerfile.api_server.base  Dockerfile.api_server.mysql  Dockerfile.api_test_env  Dockerfile.ara_test_env  Dockerfile.client  Dockerfile.model_execution_worker  Dockerfile.model_worker  Dockerfile.model_worker_centos  Dockerfile.model_worker_debian  Dockerfile.model_worker_debug  Dockerfile.model_worker_jit  Dockerfile.model_worker_jit_test  Dockerfile.oasis_api_server  Dockerfile.oasis_api_server.base  Dockerfile.oasis_api_server.mysql  Dockerfile.server  Dockerfile.server.alpine  Dockerfile.test_env  Dockerfile.worker  LICENSE  OasisApiSwagger.json  README.md  RELEASE.md  S3_docker-compose.yml  Swagger Docs.html  VERSION  analysis_settings.json  (+44 more)
.github/: PULL_REQUEST_TEMPLATE.md
ara_data/: analysis_settings.json
ara_tests/: analysis_settings.json
asgi/: run-asgi.sh
compose/: OLD_debug.docker-compose.yml  celery-ssl.docker-compose.yml  debug.docker-compose.yml  docker-compose.yml  mysql.docker-compose.yml  oasis.tester.yml  oasisapi.yml  oasisworker.yml  oasisworkerv3.yml  postgres.docker-compose.yml  rabbitmq-ssl.docker-compose.yml  redis.docker-compose.yml  s3.docker-compose.yml  tag.docker-compose.yml  traefik.docker-compose.yml  ui.docker-compose.yml  update2020_docker-compose.yml  update2020_s3.docker-compose.yml
docker/: Dockerfile.api_server_alpine  (+13 more)
(+949 files in other folders)
