[wheel]
universal = 1

[metadata]
description-file = README.rst

[tool:pytest]
DJANGO_SETTINGS_MODULE = src.server.oasisapi.settings
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,.ropeproject
python_classes =
norecursedirs = out build venv kubernetes
# Oidc/keycloak test cases need to be run separately due to different django configuration
addopts = --ignore=src/server/oasisapi/auth/tests/test_oidc.py

[flake8]
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,.ropeproject,.hypothesis
ignore = E501

[coverage:run]
branch = true

[coverage:report]
show_missing = true
